# iridium

./: .gitmodules  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/iridium-acquire/: Cargo.toml
crates/iridium-acquire/src/: lib.rs  pipeline.rs  writer.rs
crates/iridium-app/: Cargo.toml
crates/iridium-app/src/: app.rs  config.rs  error.rs  main.rs  state.rs  verify.rs  worker.rs
crates/iridium-app/src/ui/: audit.rs  central_tabs.rs  completed.rs  devices.rs  inspector.rs  job_form.rs  mod.rs  progress.rs  queue.rs  status_bar.rs  theme.rs
crates/iridium-audit/: Cargo.toml
crates/iridium-audit/src/: event.rs  lib.rs
crates/iridium-core/: Cargo.toml
crates/iridium-core/src/: lib.rs
crates/iridium-device/: Cargo.toml
crates/iridium-device/src/: ioctl.rs  lib.rs  reader.rs  sysfs.rs
crates/iridium-ewf/: Cargo.toml
crates/iridium-ewf-sys/: Cargo.toml  build.rs
crates/iridium-ewf-sys/src/: lib.rs
crates/iridium-ewf/src/: lib.rs
crates/iridium-ewf/tests/: roundtrip.rs
crates/iridium-hash/: Cargo.toml
crates/iridium-hash/src/: lib.rs  md5.rs  sha1.rs  sha256.rs
crates/iridium-recovery/: Cargo.toml
crates/iridium-recovery/src/: hash_pass.rs  lib.rs  map.rs  passes.rs  recovery_file.rs
docs/: phase2-device-plan.md  spec.md
docs/adr/: 0001-gui-egui.md  0002-static-libewf.md  0003-aff-format.md  0004-device-enumeration.md  0005-acquire-pipeline.md  0006-ewf-writer.md  0007-audit-log.md  0008-recovery-mode.md  0009-gui-architecture.md
