[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
license      = "GPL-3.0-or-later"
authors      = ["overcuriousity"]
repository   = "https://github.com/overcuriousity/iridium"

[workspace.dependencies]
# async runtime
tokio        = { version = "1", features = ["rt-multi-thread", "sync", "io-util"] }
# parallelism
rayon        = "1"
# GUI
egui         = "0.34"
eframe       = { version = "0.34", default-features = false, features = ["default_fonts", "glow"] }
# CLI
clap         = { version = "4", features = ["derive"] }
# serialisation
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
# hashing
md-5         = "0.11"
sha1         = "0.10"
sha2         = "0.10"
# platform / ioctls
nix          = { version = "0.29", features = ["ioctl", "fs"] }
libc         = "0.2"
# error handling
thiserror    = "2"
# logging facade
log          = "0.4"
# cross-crate channel
crossbeam-channel = "0.5"
