[package]
name        = "iridium-acquire"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "iridium — acquisition pipeline: reader → hash fan-out → writers"

[dependencies]
iridium-core    = { path = "../iridium-core" }
iridium-device  = { path = "../iridium-device" }
iridium-hash    = { path = "../iridium-hash" }
# iridium-ewf added in Phase 4 when the EWF writer is implemented
iridium-audit   = { path = "../iridium-audit" }
tokio.workspace  = true
rayon.workspace  = true
thiserror.workspace = true
crossbeam-channel.workspace = true
log.workspace = true

[dev-dependencies]
tempfile.workspace = true
