[package]
name        = "iridium-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "iridium — forensic disk imaging GUI"

[[bin]]
name = "iridium"
path = "src/main.rs"

[dependencies]
iridium-core     = { path = "../iridium-core" }
iridium-device   = { path = "../iridium-device" }
iridium-acquire  = { path = "../iridium-acquire" }
iridium-audit    = { path = "../iridium-audit" }
iridium-recovery = { path = "../iridium-recovery" }
iridium-hash     = { path = "../iridium-hash" }
iridium-ewf      = { path = "../iridium-ewf" }
egui.workspace        = true
eframe.workspace      = true
egui_extras.workspace = true
egui_plot.workspace   = true
egui-phosphor.workspace = true
rfd.workspace         = true
serde_json.workspace  = true
libc.workspace        = true
crossbeam-channel.workspace = true
thiserror.workspace = true
serde.workspace  = true
log.workspace    = true
time.workspace   = true
toml.workspace   = true
directories.workspace = true

[dev-dependencies]
tempfile.workspace = true
