[package]
name        = "iridium-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "iridium — append-only audit log with optional PGP signing"

[dependencies]
iridium-core = { path = "../iridium-core" }
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true

[features]
# Enable PGP signing of closed audit logs via sequoia-openpgp (pure-Rust)
pgp-signing = []
