[package]
name        = "iridium-audit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "iridium — append-only JSONL audit log"

[dependencies]
iridium-core = { path = "../iridium-core" }
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
time.workspace       = true

[dev-dependencies]
tempfile.workspace = true
