[package]
name        = "iridium-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "iridium — domain types and shared abstractions"

[dependencies]
serde.workspace     = true
serde_json.workspace = true
thiserror.workspace = true
