[package]
name        = "iridium-ewf-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "iridium — raw FFI bindings for libewf (statically linked)"
links       = "ewf"

[build-dependencies]
pkg-config = "0.3"

[features]
# Force dynamic linking via pkg-config instead of the vendored build.
# Useful for development on systems where compiling libewf from source is impractical.
system-libewf = []
