[package]
name        = "iridium-ewf-sys"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "iridium — raw FFI bindings for libewf (statically linked)"
links       = "ewf"

[build-dependencies]
pkg-config = "0.3"

[features]
# Use system pkg-config instead of compiling libewf from vendor/ source.
# Requires libewf-dev (Debian/Ubuntu) or libewf-devel (Fedora/RHEL).
system-libewf = []
